samples/_failures_safe/1761004445_bd5089_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd55f9ac.c: In function ‘main’:
./samples/SAFE/__tmp_dd55f9ac.c:181:38: error: expected ‘)’ at end of input
  181 |         if (token.type == TOKEN_ERROR
      |            ~                         ^
      |                                      )
./samples/SAFE/__tmp_dd55f9ac.c:181:9: error: expected declaration or statement at end of input
  181 |         if (token.type == TOKEN_ERROR
      |         ^~
./samples/SAFE/__tmp_dd55f9ac.c:181:9: error: expected declaration or statement at end of input
